fix font misalignment between h1 and h2

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -55,6 +55,7 @@ h1 {
 }
 
 h2 {
+  font-family: $font-brand;
   font-weight: 400;
 }
 
